# openGL_boilerplate

./: CMakeLists.txt  LICENSE  SimpleSquare.cpp  SimpleSquare.h  main.cpp
